Merge from master, change download URL to archive